tests/codegen/errors/codegen/codegen/index.array.out-of-bounds/atom.menu.error.codegen.index.array.out-of-bounds.005/menu-codegen-index.array.out-of-bounds-005.mon
;; TEST-ID: tests.codegen.menu.errors.codegen.index.array.out.of.bounds.005
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: expected-fail-compiled
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: codegen/index.array.out-of-bounds
;; TEST-MENU: errors/codegen/index.array.out-of-bounds/atom.menu.error.codegen.index.array.out-of-bounds.005
;; TEST-MENU-PATH: codegen/errors/codegen/index.array.out-of-bounds/atom.menu.error.codegen.index.array.out-of-bounds.005
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin codegen diagnostic: index out of bounds
;; TEST-ATOM: atom.menu.error.codegen.index.array.out-of-bounds.005
;; TEST-CODEGEN-ATOM: atom.menu.error.codegen.index.array.out-of-bounds.005
;; TEST-ATOM-LEAF: atom.menu.error.codegen.index.array.out-of-bounds.005
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: codegen
;; TEST-ERROR-FAMILY: index.array.out-of-bounds
;; TEST-ERROR-MESSAGE: index out of bounds
;; TEST-ERROR-SOURCE: codegen.c
;; TEST-ERROR-PATH: codegen.c:diagnostic
;; TEST-CODEGEN-PATH: diagnostic.codegen.index.array.out-of-bounds
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: codegen
;; TEST-TAG: menu
;; TEST-COVERAGE: codegen.c diagnostic index out of bounds
;; TEST-USES-ATOM: atom.menu.error.codegen.index.array.out-of-bounds.005
;; TEST-USES-ATOM: atom.error.codegen
;; TEST-USES-ATOM: atom.error.codegen.index.array.out-of-bounds
;; TEST-USES-ATOM: atom.codegen.error
;; TEST-DEPENDS-ON: atom.codegen.expr.dispatch
;; TEST-REFINES: atom.error.codegen
;; TEST-REFINES: atom.error.codegen.index.array.out-of-bounds
;; TEST-REFINES: atom.codegen.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors codegen codegen

(module Main)
(show ([1 2] 9))
;; codegen menu variant 5
